--- a/package.json
+++ b/package.json
@@ -11,11 +11,12 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
-    "babel-plugin-module-resolver": "^4.1.0",
+    "axios": "^0.27.2",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-icons": "^4.4.0"
+    "react-icons": "^4.4.0",
+    "react-query": "^4.0.0"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
