chore: 절대경로 추가

--- a/.babelrc
+++ b/.babelrc
@@ -6,10 +6,13 @@
       {
         "root": ["./src"],
         "alias": {
-          "@constants": "./src/constants",
-          "@utils": "./src/utils",
-          "@hooks": "./src/hooks",
-          "@components": "./src/components"
+          "@components": ".src/components",
+          "@constants": "src/constants",
+          "@hooks": "src/hooks",
+          "@interfaces": "src/interfaces",
+          "@mutations": "src/mutations",
+          "@queries": "src/queries",
+          "@utils": "src/utils"
         }
       }
     ]
