--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,10 +2,13 @@
   "compilerOptions": {
     "baseUrl": ".",
     "paths": {
+      "@components/*": ["src/components/*"],
       "@constants/*": ["src/constants/*"],
-      "@utils/*": ["src/utils/*"],
       "@hooks/*": ["src/hooks/*"],
-      "@components/*": ["src/components/*"]
+      "@interfaces/*": ["src/interfaces/*"],
+      "@mutations/*": ["src/mutations/*"],
+      "@queries/*": ["src/queries/*"],
+      "@utils/*": ["src/utils/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
