--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
     "axios": "^0.27.2",
+    "babel-plugin-module-resolver": "^4.1.0",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
