--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-query": "^4.0.0"
+    "react-query": "^4.0.0",
+    "recoil": "^0.7.4"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
