--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
       "@queries/*": ["src/queries/*"],
       "@customTypes/*": ["src/types/*"],
       "@utils/*": ["src/utils/*"],
+      "@types/*": ["src/types/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
