feat: currentUser Recoil 구축 (#59)
* chore: recoil 라이브러리 설치

* feat: _app에 RecoilRoot 등록

* chore: UserType 인터페이스 추가

* feat: currentUser Recoil atom 추가

* chore: 리뷰 사항 반영 및 절대경로 추가

* chore: interfaces index 절대경로 추가

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
       "@components/*": ["src/components/*"],
       "@constants/*": ["src/constants/*"],
       "@hooks/*": ["src/hooks/*"],
+      "@interfaces": ["src/interfaces/index"],
       "@interfaces/*": ["src/interfaces/*"],
       "@lib/*": ["src/lib/*"],
       "@axios/*": ["src/lib/axios/*"],
