--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,8 @@
       "@mutations/*": ["src/mutations/*"],
       "@queries/*": ["src/queries/*"],
       "@customTypes/*": ["src/types/*"],
-      "@utils/*": ["src/utils/*"]
+      "@utils/*": ["src/utils/*"],,
+      "@recoil/*": ["src/recoil/*"]
     },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
