fix: interceptor localToken 에러, window is not defined 해결

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
       "@mutations/*": ["src/mutations/*"],
       "@queries/*": ["src/queries/*"],
       "@customTypes/*": ["src/types/*"],
-      "@utils/*": ["src/utils/*"],,
+      "@utils/*": ["src/utils/*"],
       "@recoil/*": ["src/recoil/*"]
     },
     "target": "es5",
