--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@emotion/react": "^11.9.3",
     "@emotion/styled": "^11.9.3",
+    "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
-    "react-query": "^4.0.0"
+    "recoil": "^0.7.4"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
