--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,7 @@
       "@recoil/*": ["src/recoil/*"]
     },
     "target": "es5",
+    "downlevelIteration": true,
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
     "skipLibCheck": true,
