--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.9.3",
     "@tanstack/react-query": "^4.0.10",
     "axios": "^0.27.2",
+    "moment": "^2.29.4",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
